--- a/.github/worksflows/python-app.yml
+++ b/.github/worksflows/python-app.yml
@@ -1,17 +1,21 @@
-name: Python CI
+name: Advanced Calculator CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the code from your repository
+      # Step 1: Check out the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python 3.11
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -21,14 +25,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pandas python-dotenv
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Step 4: Run tests with 100% coverage enforcement
       - name: Run tests with coverage
-        run: pytest --cov=src --cov-fail-under=100
+        run: pytest --cov=app --cov-fail-under=90
 
-
-- name: Check coverage
-run: |
-  coverage report --fail-under=100
