--- a/.github/worksflows/python-app.yml
+++ b/.github/worksflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Advanced Calculator CI
+name: Python application
 
 on:
   push:
@@ -9,26 +9,21 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Check out the code
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov pandas python-dotenv
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
 
-      # Step 4: Run tests with 100% coverage enforcement
-      - name: Run tests with coverage
-        run: pytest --cov=app --cov-fail-under=90
-
+      - name: Run tests with coverage threshold
+        run: |
+          pytest --cov=app --cov-fail-under=90
